Stop name appearing too close together
I've no idea why this works as I can't see that it should have any effect. However, before this change, the line height was not 130% even though it said it was in the computed CSS. After this change, it is, which means on smaller screens it is correctly spaced out rather than on top of the next line.

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ h1, h2 {
     text-transform: uppercase;
     color: white;
     display:block;
+    line-height: 100%;
 }
 
 .ie-note{
